<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <PreferenceCategory
        android:key="pref_key_storage_settings"
        android:title="@string/notyfications">

        <CheckBoxPreference
            android:id="@+id/showNotifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/button"
            android:layout_margin="10dp"
            android:defaultValue="true"
            android:key="showNotifications"
            android:title="@string/enable_notifications" />

        <CheckBoxPreference
            android:id="@+id/showMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/button"
            android:layout_margin="10dp"
            android:defaultValue="true"
            android:dependency="showNotifications"
            android:key="showMessage"
            android:summary="@string/show_message_notifications" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="cbp_vibration"
            android:title="@string/vibration" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="cbp_sound"
            android:title="@string/sound" />

        <RingtonePreference
            android:dependency="cbp_sound"
            android:key="rp_ringtone"
            android:ringtoneType="all"
            android:title="@string/select_sound" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_key_storage_settings"
        android:title="@string/appearance">

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/font_size"
            android:entryValues="@array/font_size_values"
            android:key="font_size"
            android:title="@string/font_size" />
    </PreferenceCategory>

</PreferenceScreen>
