<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/add_receiver"
        android:gravity="center"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="Nick"
        android:gravity="center"
        android:ems="10"
        android:id="@+id/editTextNick"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/buttonContacs"
        android:layout_alignParentLeft="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/number"
        android:minEms="10"
        android:gravity="center"
        android:ems="10"
        android:id="@+id/editTextNumber"
        android:layout_below="@+id/editTextNick"
        android:layout_alignParentLeft="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:gravity="center"
        android:id="@+id/editTextPassword"
        android:hint="@string/password"
        android:layout_below="@+id/editTextNumber"
        android:layout_alignParentLeft="true" />

    <Button
        android:text="Wybierz z książki"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonContacs"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:onClick="selectContact"
        android:src="@drawable/ic_action_person" />



</RelativeLayout>